--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "next-auth": "4.19.2",
     "next-superjson": "0.0.4",
     "nodemailer": "^6.9.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "8.0.5",
+    "react-router-dom": "^6.11.0",
     "superjson": "1.12.2"
   },
   "devDependencies": {
